--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" type="image/png" href="./images/favicon.ico" />
+        <link rel="icon" type="image/png" href="./cloud.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
-        <link rel="apple-touch-icon" href="./images/logo192.png" />
+        <meta
+            name="description"
+            content="Know the weather of a city of your choice, and save your favourites so you can access them anytime"
+        />
+        <link rel="apple-touch-icon" href="./logo.png" />
 
         <link rel="manifest" href="./manifest.json" />
 
