--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,13 @@
 
         <link rel="manifest" href="./manifest.json" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
             rel="stylesheet"
-        />
+            rel="preload"
+        /> -->
         <title>Weather App</title>
     </head>
     <body>
